--- a/src/index.html
+++ b/src/index.html
@@ -3,14 +3,12 @@
 
 <head>
   <meta charset="UTF-8" />
-  <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>HW3</title>
   <link rel="stylesheet" href="./css/styles.css" />
 </head>
 
 <body>
-
   <form class="search-form">
     <input type="text" id="search-box" />
     <button type="submit">Search</button>
@@ -20,8 +18,7 @@
 
   <div class="loader"></div>
 
-  <script type="module" src="main.js"></script>
-
+  <script src="main.js" type="module"></script>
 </body>
 
 </html>
