--- a/src/index.html
+++ b/src/index.html
@@ -18,7 +18,7 @@
 
   <div class="loader"></div>
 
-  <script src="main.js" type="module"></script>
+  <script src="./main.js" type="module"></script>
 </body>
 
 </html>
